2015-05-21         Arnold D. Robbins     <arnold@skeeve.com>

	* fts.awk: Really remove atime from the output. 
	This avoids spurious failures on heavily loaded systems.

2015-05-19         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.3: Release tar ball made.

2015-05-05         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (dbugeval): Wrap in test for interactive terminal
	to avoid Mac OS X failure. Thanks to Nelson H.F. Beebe for
	the report.

2015-05-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (rebrackloc): New test.
	* rebrackloc.awk, rebrackloc.in, rebrackloc.ok: New files.

2015-04-29         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.2: Release tar ball made.

2015-04-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (inpref): New test.
	* inpref.awk, inpref.in, inpref.ok: New files.

2015-04-27         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (regexpbrack2): New test.
	* regexpbrack2.awk, regexpbrack2.in, regexpbrack2.ok: New files.
	Thanks to Nelson Beebe.

2015-04-14         Arnold D. Robbins     <arnold@skeeve.com>

	* indirectbuiltin.awk: Add another test (gensub 3 args).
	* indirectbuiltin.ok: Update good results.

2015-04-13         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (negtime): New test.
	* negtime.awk, negtime.ok: New files.

2015-04-09         Arnold D. Robbins     <arnold@skeeve.com>

	* fts.awk: Skip atime to avoid spurious timestamp
	differences. Thanks to Nelson Beebe for pointing this out.
	* Makefile.am (charset-all): Group the charset tests
	inside a check for locale support. Thanks to Nelson Beebe
	for finally motivating me to do this.
	(charset-msg-start): Update test of message some.

2015-04-08  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.am (mpfrmemok1): Use -p- for portability and
	compatibility with pc/Makefile.tst.

2015-03-31         Arnold D. Robbins     <arnold@skeeve.com>
