@@ -3,6 +3,9 @@
 	* fts.awk: Really remove atime from the output. 
 	This avoids spurious failures on heavily loaded systems.
 
+	* Makefile.am: Add list of needed locales to "inadequate locale
+	support" message.
+
 2015-05-19         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 4.1.3: Release tar ball made.
